--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Eslam Jacob" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css File -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- FontAwsome-->
     <link rel="stylesheet" href="/css/all.min.css" />
     <!-- Normalize File -->
