--- a/gallary.html
+++ b/gallary.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css File -->
-    <link rel="stylesheet" href="/css/gallary.css" />
+    <link rel="stylesheet" href="css/gallary.css" />
     <!-- FontAwsome-->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Normalize File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
