--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- Css File -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- FontAwsome-->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Normalize File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
